# common_library

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ReadMe.md  main.c  main.cpp
examples/: timer_test.cpp
logger/: Makefile  logger.cpp  logger.h  main.cpp
timer/: timer.cpp  timer.h
